# mixres

./: README.md  pyproject.toml  requirements.txt
mixres/: __init__.py
mixres/models/: _DisjointAggPP.py  _OverlapAggPP.py  __init__.py  _distributions.py  _inference.py  _utils.py
mixres/models/tests/: __init__.py  test_create_overlap_weights.py  test_find_overlap_intervals.py
mixres/sim/: __init__.py  _aggregate.py  _dgp.py  _generate_data.py
mixres/sim/tests/: test_dgp.py  test_enveloped_dgp.py  test_poisson_dgp.py
notebooks/: basic_sim.ipynb  basic_sim_disjoint_coarse.ipynb  basic_sim_misspecified.ipynb  sim_disjoint.ipynb  sim_overlap.ipynb  sim_overlap_enveloped.ipynb
notebooks/experiments/: bspline1d_utils.py  gaussian_1d_disjoint.ipynb  interval_utils.py  poisson_1d_disjoint.ipynb  poisson_1d_disjoint_fhs.ipynb  poisson_1d_disjoint_hsgp.ipynb  poisson_1d_enveloped_fhs.ipynb  poisson_1d_enveloped_hsgp.ipynb
