[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Shozen Dan", email = "shozen.dan21@imperial.ac.uk"},
]
dependencies = [
  "numpy",
  "pandas",
  "altair",
  "numpyro",
  "jax",
  "pytest",
]
description = "Modelling Mixed Resolution Data for Social Contacts"
license = {text = "MIT"}
name = "mixres"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[project.urls]
Issues = "https://github.com/ShozenD/aggregate_point_process/issues"
Repository = "https://github.com/ShozenD/aggregate_point_process"

[tool.hatch.build.targets.wheel]
packages = ["mixres"]
